# QtSampleProject

./: .gitignore  CMakeLists.txt  README.md
QtApplication/: mainwindow.cpp  mainwindow.h
UI/: mainwindow.h
